# AgentFlow

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .roomodes  AGENTS.md  AgentFlow-Functional-Requirements-Document.md  AgentFlow-Product-Requirements-Document.md  AgentFlow_PRD.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  FINAL_QA_PRODUCTION_SIGNOFF_20250824.md  INCIDENT_RESPONSE.md  Makefile  QA_SECURITY_TEST_PLAN.md  README.md  SECURITY.md  SECURITY_API_ENDPOINTS_TEST.md  SECURITY_GATES_README.md  SECURITY_MONITORING_IMPLEMENTATION_GUIDE.md  SECURITY_QA_FINAL_REPORT.md  SECURITY_TEST_COVERAGE.md  SECURITY_TEST_EXECUTION.md  THREAT_MODEL.md  acceptance-criteria.md  agentflow-codebase-xray.md  agentflow_frd.md  architecture.md  bandit_report.json  bandit_report.sarif  comprehensive-security-sli-slo-framework.md  comprehensive_security_assessment_report.md  container-structure-test.yaml  convert_to_sarif.py  docker-compose.dev.yml  docker-compose.yml  phase2_security_test_results.json  pseudocode-security-components.md  (+13 more)
.github/: AGENTS.md
.github/workflows/: AGENTS.md  deploy.yml  lint.yml  security-gates.yml  security-policy.yml  security-testing.yml
.hypothesis/constants/: 010d7104d095d9b1  02f6187f38e0e6fa  3851f76e7e2bbf7e  5a733a47f452e722  60986cbdcc9f96c1  8d4dce4303f751a4  c171e6d3172d5faa  d09756b98ec8bcf5  da39a3ee5e6b4b0d
.hypothesis/examples/04e6b3400353b141/: ba1d74dcce60872f
.roo/rules-cicd-manager/: 01-pipeline-architecture.md
.roo/rules-code-reviewer/: 01-review-methodology.md
.roo/rules-data-researcher/: mcp-playbook.md  mcp.md
.roo/rules-devops-engineer/: 01-infrastructure-strategy.md
.roo/rules-doc-manager/: 01-documentation-strategy.md
.roo/rules-git-agent/: 01-git-workflow.md  02-agents-md-processing.md  03-citation-standards.md
.roo/rules-git-manager/: 01-hybrid-workflow-mastery.md  02-gitdoc-mastery.md  03-comprehensive-testing.md
.roo/rules-project-manager/: 01-agile-framework.md
.roo/rules-security-auditor/: 01-security-framework.md
.roo/rules-sparc-autonomous-adversary/: mcp-playbook.md  mcp-tool-router.md  mcp.md
apps/api/: AGENTS.md
apps/api/app/: config.py  database.py  dependencies.py  errors.py  exceptions.py  main.py  middleware.py  rate_limiter.py
apps/mcp/: AGENTS.md  server.py
apps/mcp/tools/: middleware.py  ping.py  rag_search.py  registry.py  schemas.py  security.py  system.py
control/: graph.yaml
docs/: EXTERNAL_PENETRATION_TESTING_ENGAGEMENT.md  EXTERNAL_PENTEST_ENGAGEMENT_PACKAGE_SUMMARY.md  FINAL_SECURITY_POSTURE_REPORT.md  PHASE3_SECURITY_VALIDATION_README.md  POST_TESTING_REMEDIATION_GUIDE.md  RULES_OF_ENGAGEMENT_TEMPLATE.md  SECURITY_CONFIGURATION.md  SECURITY_IMPLEMENTATION.md  SECURITY_MIDDLEWARE.md  TEST_ENVIRONMENT_ACCESS_GUIDE.md
docs/contracts/: handoff_v1.schema.json
frontend/: .gitignore  AGENTS.md  biome.json  jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  root-layout.test.ts  root-layout.ts
frontend/app/(auth)/: layout.test.tsx  layout.tsx
frontend/components/: AGENTS.md
frontend/hooks/: AGENTS.md  useAgentRunner.test.ts  useAgentRunner.ts
frontend/lib/: AGENTS.md  api.test.ts  api.ts  types.ts
frontend/providers/: auth-provider.test.ts  auth-provider.ts  theme-provider.test.ts  theme-provider.ts
infra/: AGENTS.md  r2r.toml
logs/: dependency_warnings.txt
memory-bank/: decisionLog.md  productContext.md  progress.md  systemPatterns.md
migrations/: 0001_create_state_table.sql  AGENTS.md  env.py
migrations/versions/: 0002_core_tables.py  0003_add_otp_secret.py  0004_enhance_user_security.py
postman/: AGENTS.md  auth.postman_collection.json  auth_collection.json
reports/: npm-audit.json  phase3_security_validation_report_20250824_230711.json
scripts/: AGENTS.md  check_dependencies.py  check_redis_security.py  demo_encryption.py  dev.sh  install_security_deps.py  phase2_security_test_runner.py  run_phase3_security_tests.py  security_fuzz_test.py  security_validation_report.py  setup.sh  test_circuit_breaker.py  test_security_middleware.py
scripts/dev/: setup-environment.sh
tests/: AGENTS.md  conftest.py  test_config_validation.py  test_database_pool_settings.py  test_dependencies.py  test_install_security_deps.py
tests/ag2/: test_integration.py
tests/api/: AGENTS.md  conftest.py  test_agents.py  test_agents_router.py  test_audit_log_minimal.py  test_auth.py  test_auth_api.py  test_auth_service_async.py  test_cache_examples.py  test_correlation_header_roundtrip.py  test_db_tx_boundaries.py  test_errors.py  test_health.py  test_http_client.py  test_http_client_retries.py  test_logging.py  test_memory_api.py  test_memory_stream.py  test_middleware.py  test_rag_router.py  test_rate_limit_header.py  test_router_response_models.py  test_strict_models.py  test_user_roles.py
tests/config/: test_config.py
tests/database/: test_database_pool.py
tests/db/: test_database.py  test_models.py  test_seeds.py  test_session.py
tests/e2e/: test_agent_journey.py
tests/langgraph/: test_workflow.py
tests/mcp/: test_security.py  test_server.py  test_tools_middleware.py  test_tools_ping.py  test_tools_rag_search.py  test_tools_registry.py  test_tools_schemas.py  test_tools_system.py
tests/memory/: test_mem0_integration.py  test_stream.py
tests/metrics/: test_satisfaction.py
tests/r2r/: test_client.py  test_config.py
tests/security/: __init__.py  conftest.py  test_auth.py  test_circuits.py  test_encryption.py  test_input_validation.py  test_mcp.py  test_middleware.py  test_phase2_security_integration.py  test_phase3_comprehensive_security.py  test_rate_limiting_service.py  test_secure_jwt.py  test_secure_rag.py  test_security_integration.py  test_security_monitoring.py  test_security_structure.py  test_standalone_structure.py  test_token_revocation.py
tests/services/: test_agents.py  test_auth.py  test_memory.py  test_memory_init.py  test_memory_items_service.py  test_rag.py  test_saga.py
tests/utils/: test_crypto.py  test_encryption.py  test_password.py  test_rbac.py
(+157 files in other folders)
