# pyproject.toml - Enhanced Python configuration

[project]
name = "agentflow"
version = "0.1.0"
description = "AgentFlow MVP scaffold"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "pydantic-ai-slim[openai]>=0.0.49",
    "mcp[cli]>=0.1.0",
    "mem0-ai>=1.0.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.7",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "r2r>=0.1.0",
    "loguru>=0.7.2",
    "langgraph>=0.1.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "langgraph-checkpoint-redis>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "hypothesis>=6.112.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=apps --cov-report=term-missing"
asyncio_mode = "auto"
